# drf-action-permissions

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  pytest.ini  tox.ini
drf_action_permissions/: .editorconfig  __init__.py  permissions.py
tests/: conftest.py  test_drf_action_permissions.py
