[tool.poetry]
name = "drf-action-permissions"
version = "0.1.0"
description = "Flexible action level permissions for Django REST framework"
authors = ["Andrey Bogoyavlensky <abogoyavlensky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
